<resources>
    <!-- Manifest -->
    <string name="app_name_manifest">Photo Day</string>

    <!-- Photo Day Activity -->
    <string name="add_photo">ADD Photo</string>
    <string name="failure_initialize_control">Failure Initialize Control</string>
    <string name="failure_initialize_date_picker">Failure Initialize Date picker</string>
    <string name="failure_capture_image">Failure Capture Image</string>
    <string name="successfully_upload_image">Successfully upload image</string>
    <string name="error_api_photo">Error API</string>
    <string name="note_add_item">Note ADD Successful</string>
    <string name="note_add_failure_activity">Opsss! Failure API. Try again</string>

    <!-- Base Fragment -->

    <!-- Configuration Fragment -->
    <string name="user_name">User name</string>
    <string name="email_user">Email</string>
    <string name="logout">logout</string>
    <string name="name_change_successful">Name change Successful</string>
    <string name="image_change_successful">Image change Successful</string>
    <string name="change_image_user">Image User</string>
    <string name="failure_api">Opsss! Failure API. Try again</string>
    <string name="failure_capture_image_user">Failure Capture Image User</string>
    <string name="error_api_configuration">Error API</string>
    <string name="switch_gallery">Gallery</string>
    <string name="switch_image_day">Image day</string>

    <!-- Gallery Fragment -->
    <string name="configuration_gallery">Configuration Gallery</string>
    <string name="error_api">Error API</string>

    <!-- Login Fragment -->
    <string name="please_enter_valid_email_login">Please enter valid email</string>
    <string name="please_enter_email_login">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="email_user_login">Email</string>
    <string name="password">  Password</string>
    <string name="login">Login</string>
    <string name="login_is_success">Login Success</string>
    <string name="verify_your_email_address">Please verify your email address</string>
    <string name="email_sent">Email sent</string>
    <string name="unregistered_email">Unregistered Email</string>
    <string name="failure_api_login">Opsss! Failure API. Try again</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_new_user">Register New User</string>
    <string name="failure_login_user">Failure Login User</string>
    <string name="authentication_failed_try_again">Authentication failed. Try again</string>
    <string name="check_your_email_and_confirm">Check your Email and Confirm</string>

    <!-- Register Fragment -->
    <string name="please_enter_email_register">Please enter email</string>
    <string name="please_enter_valid_email_register">Please Enter Valid Email</string>
    <string name="please_enter_password_register">Please enter password</string>
    <string name="please_enter_password_confirm">Please enter password confirm</string>
    <string name="password_are_not_the_same">Password are not the same</string>
    <string name="email_user_register">Email</string>
    <string name="password_register">  Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>

    <!-- Timeline Fragment -->

    <!-- Splash Fragment -->
    <string name="photo_day">Photo Day</string>
    <string name="title_activity_splash_login">SplashLogin</string>

    <!-- Alert Dialog -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="what_is_your_email">What\'s your email?</string>
    <string name="what_is_your_name">What\'s your name?</string>
    <string name="enter_valid_name">Enter a valid name</string>
    <string name="enter_title">Enter with a title</string>
    <string name="enter_note">Enter with a note</string>
    <string name="please_enter_email_dialog">Please enter email</string>
    <string name="cannot_access_gallery">Cannot Access Gallery</string>
    <string name="please_enter_valid_email_dialog">Please Enter Valid Email</string>
    <string name="email">Email</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="new_user_name">New Name</string>

    <!-- Permission -->
    <string name="version_less_23">Version less than 23</string>
    <string name="error_version_less_23">Error Version less than 23</string>
    <string name="error_access_gallery">Error Access Gallery</string>
    <string name="error_access_camera">Error Access Camera</string>
    <string name="errorPermission">Error Permission</string>

    <!-- Firebase Auth-->
    <string name="successfully_logged">Logged successfully</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="auth_failed">Sorry, auth failed.</string>
    <string name="login_success">Login success</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="login_failed">Login failed.</string>
    <string name="password_needs_least_6_digits">Password needs at least 6 digits</string>
    <string name="email_invalid">Email invalid</string>
    <string name="email_already_been">Email Address has already been registered</string>
    <string name="unknown_error">Unknown error</string>
    <string name="email_or_password_wrong">Email or Password is wrong</string>

    <!-- Full Screen Photo Fragment  -->
    <string name="successfully_delete_image">Successfully delete Image</string>
    <string name="error_api_full_screen">Error API</string>

    <!-- Menu  -->
    <string name="timeline">Timeline</string>
    <string name="gallery_bottom">Gallery</string>
    <string name="image_day">Image Day</string>
    <string name="configuration">Configuration</string>
    <string name="configuration_gallery_menu">Configuration Gallery</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Nav Graph -->
    <string name="nav_graph_label_timeline">Timeline</string>
    <string name="nav_graph_label_gallery">Gallery</string>
    <string name="nav_graph_label_login">Login</string>
    <string name="nav_graph_label_register">Register</string>
    <string name="nav_graph_label_splash_login">Splash Login</string>
    <string name="nav_graph_label_configuration">Configuration</string>
    <string name="nav_graph_label_splash_goodbye">Splash GoodBye</string>
    <string name="nav_graph_label_splash_intro">Splash Intro</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Note Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="nota">Nota</string>
    <string name="error_api_note">Error API</string>
    <string name="note_add">Note ADD Successful</string>
    <string name="note_add_failure">Opsss! Failure API. Try again</string>
    <string name="note_delete">Note delete successful</string>
    <string name="note_delete_failure">Delete Note Failure</string>

</resources>