<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="note"
            type="com.example.photoday.ui.databinding.data.ItemNoteData" />

        <variable
            name="okButton"
            type="android.view.View.OnClickListener" />

        <variable
            name="cancelButton"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_constrain_layout_8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/padding_text_6sp"
            android:text="@{note.date}"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tex_input_title"
            tools:text="@string/text_view_tools_date" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tex_input_title"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_title"
                style="@style/TextInputEditText"
                android:hint="@string/title"
                android:text="@={note.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tex_input_nota"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tex_input_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_note"
                style="@style/TextInputEditText"
                android:layout_height="300dp"
                android:gravity="start"
                android:hint="@string/nota"
                android:text="@={note.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_ok"
            style="@style/AppCompatButtonTransparent"
            android:onClick="@{okButton}"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_cancel"
            app:layout_constraintTop_toBottomOf="@id/tex_input_nota" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            style="@style/AppCompatButtonTransparent"
            android:onClick="@{cancelButton}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/button_ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tex_input_nota" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>