<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_register_security"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_top_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_colorFilter="@color/orange_lottie_animation_view"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login_security" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_input_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_text_input_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottie_register_security"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_input_edit_text"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email_user_register"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_input_user_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_text_input_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_input_user_email"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_input_edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password_register"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_input_user_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_text_input_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_input_user_password"
        app:passwordToggleEnabled="true"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleTint="@color/orange_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_user_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_input_edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_8dp_button"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/edit_text_input_user_confirm_password"
        app:layout_constraintStart_toStartOf="@id/edit_text_input_user_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/edit_text_input_user_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>