<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_user_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_user"
            android:inputType="number"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintEnd_toEndOf="@id/login_user_id"
        app:layout_constraintStart_toStartOf="@id/login_user_id"
        app:layout_constraintTop_toBottomOf="@id/login_user_id"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="number"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button_log"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/login_password"
        app:layout_constraintStart_toStartOf="@id/login_password"
        app:layout_constraintTop_toBottomOf="@id/login_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/register_new_user"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintEnd_toEndOf="@id/login_button_log"
        app:layout_constraintStart_toStartOf="@id/login_button_log"
        app:layout_constraintTop_toBottomOf="@id/login_button_log" />
</androidx.constraintlayout.widget.ConstraintLayout>