<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickUploadCamera"
            type="android.view.View.OnClickListener" />

        <variable
            name="clickUploadGallery"
            type="android.view.View.OnClickListener" />

        <variable
            name="clickUploadNote"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_dialog">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_upload_camera"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/layout_margin_start_16dp"
            android:layout_marginTop="@dimen/layout_margin_top_8dp"
            android:onClick="@{ clickUploadCamera}"
            app:layout_constraintEnd_toStartOf="@id/image_upload_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_photo_camera"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_camera"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/camera"
            android:textColor="@color/orange_light_text_view"
            app:layout_constraintEnd_toEndOf="@id/image_upload_camera"
            app:layout_constraintStart_toStartOf="@id/image_upload_camera"
            app:layout_constraintTop_toBottomOf="@id/image_upload_camera" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_upload_gallery"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/layout_margin_start_16dp"
            android:layout_marginTop="@dimen/layout_margin_top_8dp"
            android:onClick="@{clickUploadGallery}"
            app:srcCompat="@drawable/ic_photo_gallery"
            app:layout_constraintEnd_toStartOf="@id/note_upload"
            app:layout_constraintStart_toEndOf="@id/image_upload_camera"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gallery"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/gallery"
            android:textColor="@color/orange_light_text_view"
            app:layout_constraintEnd_toEndOf="@id/image_upload_gallery"
            app:layout_constraintStart_toStartOf="@id/image_upload_gallery"
            app:layout_constraintTop_toBottomOf="@id/image_upload_gallery" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/note_upload"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/layout_margin_start_16dp"
            android:layout_marginTop="@dimen/layout_margin_top_8dp"
            android:onClick="@{clickUploadNote}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_upload_gallery"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_note" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/note"
            android:textColor="@color/orange_light_text_view"
            app:layout_constraintEnd_toEndOf="@id/note_upload"
            app:layout_constraintStart_toStartOf="@id/note_upload"
            app:layout_constraintTop_toBottomOf="@id/note_upload" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>